cmake_minimum_required(VERSION 3.17)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(SortedList cmake-build-debug/HomeWork_17.03/SortedList.cpp)

add_executable(Heap cmake-build-debug/HomeWork_24.03/MaxHeap.cpp)

add_executable(RangeTree cmake-build-debug/FirstSemesterWork/RangeTree.cpp)