cmake_minimum_required(VERSION 3.17)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(SortedList cmake-build-debug/HomeWork_17.03/SortedList.cpp)

add_executable(Heap cmake-build-debug/HomeWork_24.03/MaxHeap.cpp)

add_executable(RangeTree cmake-build-debug/FirstSemesterWork/RangeTree.cpp)

add_executable(UseBinarySearch cmake-build-debug/HomeWork_21.04/FourthTask.cpp)

add_executable(Task cmake-build-debug/HomeWork_26.05/SecondTask.cpp)

add_executable(Sorting cmake-build-debug/SecondSemesterWork/Main.cpp)
